# wiz

./: .gitignore  Dockerfile  README.md  docker-compose.yml  env  helloworld.wiz  install.sh  wiz.asdl  wiz.bnf
wiz/: Cargo.toml  helloworld.ll  sample.ll
wiz/src/: ast.rs  constants.rs  ext.rs  high_level_ir.rs  llvm_ir.rs  main.rs  middle_level_ir.rs  parser.rs  syntax.rs  utils.rs
wiz/src/ast/: binop.rs  block.rs  constant.rs  decl.rs  decl_stmt.rs  expr.rs  expr_stmt.rs  file.rs  fun.rs  literal.rs  name.rs  node.rs  stmt.rs  struct_.rs  token.rs  trivia.rs  type_name.rs  var.rs
wiz/src/ast/fun/: arg_def.rs  body_def.rs
wiz/src/ext/: string.rs
wiz/src/high_level_ir/: type_resolver.rs  typed_annotation.rs  typed_decl.rs  typed_expr.rs  typed_file.rs  typed_stmt.rs  typed_type.rs  typed_use.rs
wiz/src/high_level_ir/type_resolver/: context.rs  error.rs  result.rs  tests.rs
wiz/src/llvm_ir/: codegen.rs  tests.rs
wiz/src/middle_level_ir/: builder.rs  format.rs  ml_decl.rs  ml_expr.rs  ml_file.rs  ml_node.rs  ml_stmt.rs  ml_type.rs  tests.rs
wiz/src/parser/: error.rs  nom.rs  parser.rs  result.rs  wiz.rs
wiz/src/parser/nom/: character.rs  combinator.rs  declaration.rs  expression.rs  keywords.rs  lexical_structure.rs  operators.rs  type_.rs
wiz/src/parser/wiz/: annotation.rs  character.rs  declaration.rs  expression.rs  keywords.rs  lexical_structure.rs  operators.rs  statement.rs  type_.rs
wiz/src/syntax/: annotation.rs  block.rs  decl.rs  expr.rs  file.rs  literal.rs  node.rs  stmt.rs  token.rs  trivia.rs  type_name.rs
wiz/src/syntax/fun/: arg_def.rs  body_def.rs
wiz/src/utils/: stacked_hash_map.rs
wiz/wiz/: Cargo.toml
wiz/wiz/src/: build.rs  check.rs  common.rs  constant.rs  core.rs  error.rs  external_subcommand.rs  init.rs  main.rs  manifest.rs  new.rs  run.rs  subcommand.rs  test.rs
wiz/wiz/src/core/: context.rs  dep.rs  error.rs  manifest.rs  workspace.rs
wiz/wiz/src/subcommand/: clean.rs
wiz/wiz_arena/: Cargo.toml
wiz/wiz_arena/src/: arena.rs  declaration.rs  declaration_id.rs  lib.rs
wiz/wiz_arena/src/arena/: function.rs  namespace.rs  struct.rs
wiz/wiz_constants/: Cargo.toml
wiz/wiz_constants/src/: lib.rs
wiz/wiz_data_structure/: Cargo.toml
wiz/wiz_data_structure/src/: annotation.rs
wiz/wiz_dev_utils/: Cargo.toml
wiz/wiz_dev_utils/src/: lib.rs
wiz/wiz_hir/: Cargo.toml
wiz/wiz_hir/src/: lib.rs  typed_decl.rs  typed_expr.rs  typed_file.rs  typed_stmt.rs  typed_type.rs  typed_type_constraint.rs  typed_use.rs
wiz/wiz_infer/: Cargo.toml
wiz/wiz_infer/src/: ast.rs  collect.rs  error.rs  expand.rs  infer.rs  lib.rs  result.rs  ty_env.rs
wiz/wiz_infer/src/ast/: book.rs  declaration.rs  expr.rs  toplevel.rs  ty.rs
wiz/wiz_lexar/: Cargo.toml
wiz/wiz_lexar/src/: lib.rs  tests.rs  token.rs  unescape.rs
wiz/wiz_lexar/src/unescape/: tests.rs
wiz/wiz_mir/: Cargo.toml
wiz/wiz_mir/src/: builder.rs  expr.rs  format.rs  lib.rs  ml_decl.rs  ml_file.rs  ml_node.rs  ml_type.rs  statement.rs
wiz/wiz_mir/src/builder/: error.rs  fun_builder.rs
wiz/wiz_mir/src/expr/: array.rs  block.rs  call.rs  if_expr.rs  literal.rs
wiz/wiz_mir/src/statement/: return_statement.rs
wiz/wiz_mir_parser/: Cargo.toml
wiz/wiz_mir_parser/src/: error.rs  lexer.rs  lib.rs  parser.rs
wiz/wiz_mir_parser/src/lexer/: string_reader.rs  token_stream_builder.rs  token_trees.rs
wiz/wiz_mir_parser/src/parser/: tests.rs
wiz/wiz_mir_syntax/: Cargo.toml
wiz/wiz_mir_syntax/src/: lib.rs  span.rs  syntax.rs  token.rs
wiz/wiz_result/: Cargo.toml
wiz/wiz_result/src/: error.rs  lib.rs  result.rs
wiz/wiz_session/: Cargo.toml
wiz/wiz_session/src/: lib.rs  out_stream.rs  parse.rs
wiz/wiz_session/src/out_stream/: void_stream.rs
wiz/wiz_span/: Cargo.toml
wiz/wiz_span/src/: lib.rs
wiz/wiz_syntax/: Cargo.toml
wiz/wiz_syntax/src/: lib.rs  parser.rs  syntax.rs
wiz/wiz_syntax/src/parser/: error.rs  tests.rs  wiz.rs
wiz/wiz_syntax/src/parser/wiz/: annotation.rs  character.rs  declaration.rs  expression.rs  keywords.rs  lexical_structure.rs  name_space.rs  operators.rs  statement.rs  type_.rs
wiz/wiz_syntax/src/syntax/: annotation.rs  block.rs  decl.rs  declaration.rs  expr.rs  expression.rs  file.rs  list.rs  literal.rs  modifier.rs  name_space.rs  statement.rs  stmt.rs  token.rs  trivia.rs  type_name.rs
wiz/wiz_syntax/src/syntax/decl/: fun.rs  fun_syntax.rs  use_syntax.rs  var_syntax.rs
wiz/wiz_syntax/src/syntax/declaration/: extension_syntax.rs  fun_syntax.rs  properties_syntax.rs  struct_syntax.rs  use_syntax.rs  var_syntax.rs
wiz/wiz_syntax_parser/: Cargo.toml
wiz/wiz_syntax_parser/src/: parser.rs
wiz/wiz_syntax_parser/src/parser/: result.rs  tests.rs  wiz.rs
wiz/wiz_utils/: Cargo.toml
wiz/wiz_utils/src/: lib.rs  random.rs  stacked_hash_map.rs  temp.rs  topological_sort.rs  utils.rs
wiz/wiz_utils/src/ext/: string.rs
wiz/wizc/: Cargo.toml
wiz/wizc/resources/test/: helloworld.wiz
wiz/wizc/src/: config.rs  constants.rs  high_level_ir.rs  main.rs  middle_level_ir.rs  result.rs  utils.rs
wiz/wizc/src/high_level_ir/: declaration_id.rs  node_id.rs  type_checker.rs  type_id.rs  type_resolver.rs  typed_annotation.rs  typed_decl.rs  typed_expr.rs  typed_file.rs  typed_stmt.rs  typed_type.rs  typed_type_constraint.rs  typed_use.rs  wlib.rs
wiz/wizc/src/hir_lowing/: tests.rs
wiz/wizc/src/llvm_ir/: codegen.rs  tests.rs
wiz/wizc/src/middle_level_ir/: builder.rs  context.rs  expr.rs  format.rs  ml_decl.rs  ml_expr.rs  ml_file.rs  ml_node.rs  ml_stmt.rs  ml_type.rs  statement.rs  tests.rs
wiz/wizc/src/utils/: get_or_default.rs  get_or_insert.rs  stacked_hash_map.rs
wiz/wizc_cli/: .gitignore  Cargo.toml
wiz/wizc_cli/src/: config.rs  lib.rs
wiz/wizc_cli/src/config/: build_type.rs  emit.rs  message_format.rs
wiz/wizc_hir_lowing/: Cargo.toml
wiz/wizc_hir_lowing/src/: lib.rs  lowing.rs
wiz/wizc_message/: Cargo.toml
wiz/wizc_message/src/: formatter.rs  lib.rs  output.rs  parser.rs
wiz/wizc_syntax_visitor/: Cargo.toml
wiz/wizc_syntax_visitor/src/: item_collector.rs  lib.rs  scanner.rs  type_collector.rs
(+128 files in other folders)
