[workspace]

members = [
    "wiz",
    "wiz_arena",
    "wiz_constants",
    "wiz_dev_utils",
    "wiz_hir",
    "wiz_infer",
    "wiz_lexar",
    "wiz_mir",
    "wiz_result",
    "wiz_session",
    "wiz_span",
    "wiz_syntax",
    "wiz_syntax_parser",
    "wiz_utils",
    "wizc",
    "wizc_cli",
    "wizc_syntax_visitor",
]
