[package]
name = "wiz"
version = "0.0.0"
authors = ["ChanTsune <41658782+ChanTsune@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.44"
clap = { version = "3.0.0", features = ["cargo"]}
ansi_term = "0.12"
toml = "0.5.8"
serde = { version = "1.0.136", features = ["derive"]}
wizc_cli = { path = "../wizc_cli" }
wiz_session = { path = "../wiz_session" }
wiz_utils = { path = "../wiz_utils" }
