[package]
name = "wiz"
version = "0.0.0"
authors = ["ChanTsune <41658782+ChanTsune@users.noreply.github.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.44"
clap = { version = "4.0.4", features = ["cargo"]}
ansi_term = "0.12"
toml = "0.5.8"
serde = { version = "1.0.136", features = ["derive"]}
wizc_cli = { path = "../wizc_cli" }
wiz_result = { path = "../wiz_result" }
wiz_utils = { path = "../wiz_utils" }

[dev-dependencies]
wiz_dev_utils = { path = "../wiz_dev_utils" }
