[package]
name = "wiz"
version = "0.0.0"
authors = ["ChanTsune <41658782+ChanTsune@users.noreply.github.com>"]
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ansi_term = "0.12"
anyhow = "1.0.66"
clap = { version = "4.0.4", features = ["cargo"] }
dirs = "4.0.0"
git2 = "0.16.0"
serde = { version = "1.0.136", features = ["derive"] }
toml = "0.5.8"
wiz_result = { path = "../wiz_result" }
wiz_utils = { path = "../wiz_utils" }
wizc_cli = { path = "../wizc_cli" }
wizc_message = { path = "../wizc_message" }

[dev-dependencies]
wiz_dev_utils = { path = "../wiz_dev_utils" }
