[package]
name = "wiz_hir"
version = "0.0.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.136", features = ["derive"] }
wiz_constants = { path = "../wiz_constants" }
wiz_data_structure = { path = "../wiz_data_structure" }
