[package]
name = "wiz_mir_parser"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wiz_lexar = { path = "../wiz_lexar" }
wiz_mir_syntax = { path = "../wiz_mir_syntax" }

[dev-dependencies]
wiz_dev_utils = { path = "../wiz_dev_utils" }
