[package]
name = "wizc"
version = "0.0.0"
authors = ["ChanTsune <41658782+ChanTsune@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
inkwell = { git = "https://github.com/TheDan64/inkwell", rev = "4ddaa3b", features = ["llvm12-0"] }
either = "1.6.1"
linked-hash-map = "0.5.4"
clap = "3.0.0"
wiz_syntax = { path = "../wiz_syntax" }
wiz_mir = { path = "../wiz_mir" }
