[package]
name = "wizc"
version = "0.0.0"
authors = ["ChanTsune <41658782+ChanTsune@users.noreply.github.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
inkwell = { git = "https://github.com/TheDan64/inkwell", rev = "c71d7ed", features = ["llvm12-0"] }
either = "1.6.1"
linked-hash-map = "0.5.4"
serde = { version = "1.0.136", features = ["derive"]}
serde_json = "1.0.78"
wiz_constants = { path = "../wiz_constants" }
wizc_cli = { path = "../wizc_cli" }
wiz_session = { path = "../wiz_session" }
wiz_syntax = { path = "../wiz_syntax" }
wiz_syntax_parser = { path = "../wiz_syntax_parser" }
wiz_hir = { path = "../wiz_hir" }
wiz_mir = { path = "../wiz_mir" }
wiz_utils = { path = "../wiz_utils" }
