[package]
name = "wizc"
version = "0.0.0"
authors = ["ChanTsune <41658782+ChanTsune@users.noreply.github.com>"]
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dirs = "4.0.0"
either = "1.6.1"
inkwell = { git = "https://github.com/TheDan64/inkwell", rev = "4b67a7f", features = ["llvm14-0"] }
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.78"
wiz_arena = { path = "../wiz_arena" }
wiz_constants = { path = "../wiz_constants" }
wiz_data_structure = { path = "../wiz_data_structure" }
wiz_hir = { path = "../wiz_hir" }
wiz_mir = { path = "../wiz_mir" }
wiz_result = { path = "../wiz_result" }
wiz_session = { path = "../wiz_session" }
wiz_syntax = { path = "../wiz_syntax" }
wiz_syntax_parser = { path = "../wiz_syntax_parser" }
wiz_utils = { path = "../wiz_utils" }
wizc_cli = { path = "../wizc_cli" }
wizc_hir_lowing = { path = "../wizc_hir_lowing" }
wizc_message = { path = "../wizc_message" }
